// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Large story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--large storybook-button--secondary"
      type="button"
    >
      Button
    </button>
  </div>
</body>
`;

exports[`Renders Primary story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--primary"
      type="button"
    >
      Button
    </button>
  </div>
</body>
`;

exports[`Renders Secondary story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      Button
    </button>
  </div>
</body>
`;

exports[`Renders Small story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--small storybook-button--secondary"
      type="button"
    >
      Button
    </button>
  </div>
</body>
`;
